WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228128
REGRESSION(
r267763
): [SOUP] After network process crash, all cookies are lost until browser is restarted
https://bugs.webkit.org/show_bug.cgi?id=228128
Summary
REGRESSION(r267763): [SOUP] After network process crash, all cookies are lost...
Michael Catanzaro
Reported
2021-07-20 14:59:09 PDT
After a network process crash, all cookies are lost until the browser is restarted. At least, I think that's what's happening. I'm logged out of all websites. Everything's fine again after restarting Epiphany. This is weird.
Attachments
Patch
(11.70 KB, patch)
2021-07-21 03:52 PDT
,
Carlos Garcia Campos
aperez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2021-07-21 03:52:42 PDT
Created
attachment 433924
[details]
Patch
EWS Watchlist
Comment 2
2021-07-21 03:53:28 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
https://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3
2021-07-21 04:51:29 PDT
Committed
r280128
(
239838@main
): <
https://commits.webkit.org/239838@main
>
Michael Catanzaro
Comment 4
2021-07-21 05:27:25 PDT
Comment on
attachment 433924
[details]
Patch Wow!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug